idea/testData/checker/codeFragments/privateMembers.kt.fragment
a.<error descr="[INVISIBLE_MEMBER] Cannot access 'ensureCapacityInternal': it is private in 'ArrayList'">ensureCapacityInternal</error>(0)